 - GBA Hardware: Fix crash if a savestate lies about game hardware
 - Test: Fix crash when fuzzing fails to load a file
 - Qt: Disable "New multiplayer window" when MAX_GBAS is reached (fixes mgba.io/i/107)
 - LR35902: Fix decoding LD r, $imm and 0-valued immediates (fixes mgba.io/i/735)
 - GB: Fix STAT blocking
 - GB MBC: Fix swapping carts not detect new MBC
Misc:
 - SDL: Remove scancode key input
 - GBA Video: Clean up unused timers
 - Test: Add a basic test suite
 - GBA Video: Allow multiple handles into the same tile cache
 - VFS: Call msync when syncing mapped data
 - GBA Video, GB Video: Colors are now fully scaled
 - VFS: Allow truncating memory chunk VFiles
 - Debugger: Modularize CLI debugger
 - Core: Clean up some thread state checks
 - Debugger: Make building with debugging aspects optional
 - GBA Memory: Support for Mo Jie Qi Bing by Vast Fame (taizou)
 - GBA Memory: Support reading/writing POSTFLG
 - Util: Add size counting to Table
 - Qt: Move last directory setting from qt.ini to config.ini
 - 3DS, PSP2, Wii: Last directory loaded is saved
 - GB Audio: Simplify envelope code
 - GB Audio: Improve initial envelope samples
 - Debugger: Add functions for read- or write-only watchpoints
 - GBA DMA: Refactor DMA out of memory.c
 - GBA DMA: Move DMAs to using absolute timing
 - All: Add C++ header guards
 - GBA I/O: Clear JOYSTAT RECV flag when reading JOY_RECV registers
 - GBA I/O: Set JOYSTAT TRANS flag when writing JOY_TRANS registers
 - Qt: Improved HiDPI support
 - Qt: Expose configuration directory
 - Feature: Move game database from flatfile to SQLite3
 - GB Audio: Start implementing "zombie" audio (fixes mgba.io/i/389)
 - VFS: Fix some minor VFile issues with FILEs
 - Core: Add generic checksum function
 - Feature: Support ImageMagick 7
 - All: Move time.h include to common.h
 - CMake: Add ability to just print version string
 - Qt: Merge "Save" and "OK" buttons in shader options
 - SDL: Automatically map controllers when plugged in